--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
 @import url(../src/assets/font-montserrat/font-montserrat.css);
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-    
+@import "tailwindcss";
+@plugin "@tailwindcss/forms";
+@plugin "tailwind-scrollbar";
 
-.formgear-sidebar li ul{
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+    --font-family-montserrat: 'Montserrat', sans-serif;
+}
+
+
+
+.formgear-sidebar li ul {
     display: none;
 }
-.formgear-sidebar .show{
+
+.formgear-sidebar .show {
     display: block;
 }
 
@@ -17,7 +25,8 @@
 .formgear-select .solid-select-container {
     position: relative;
 }
-.formgear-select .solid-select-control {    
+
+.formgear-select .solid-select-control {
     --tw-border-opacity: 1;
     border-color: rgb(209, 213, 219, var(--tw-border-opacity));
     border-radius: 0.25rem;
@@ -31,6 +40,7 @@
     z-index: 0 !important;
     grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+
 .formgear-select .solid-select-control[data-multiple="true"][data-has-value="true"] {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -46,6 +56,7 @@
     grid-gap: 0.25rem;
     gap: 0.25rem;
 }
+
 .formgear-select .solid-select-control:focus-within {
     border-color: #2563eb;
     border-width: 2px;
@@ -53,16 +64,19 @@
     outline: transparent;
     outline-offset: none;
 }
+
 .formgear-select .solid-select-placeholder {
     --tw-text-opacity: 1;
     color: rgba(156, 163, 175, var(--tw-text-opacity));
     grid-column-start: 1;
     grid-row-start: 1;
 }
+
 .formgear-select .solid-select-single-value {
     grid-column-start: 1;
     grid-row-start: 1;
 }
+
 .formgear-select .solid-select-multi-value {
     --tw-bg-opacity: 1;
     background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -82,13 +96,16 @@
     z-index: 0 !important;
     padding-right: 4px;
 }
+
 .formgear-select .solid-select-multi-value-remove {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
 }
+
 .formgear-select .solid-select-multi-value-remove:hover {
     text-shadow: 1px 1px 3px rgb(0 0 0 / 29%), 2px 4px 7px rgb(73 64 125 / 35%);
 }
+
 .formgear-select .solid-select-input {
     background-color: transparent;
     border-width: 0px;
@@ -103,14 +120,17 @@
     grid-row-start: 1;
     font: inherit;
 }
+
 .formgear-select .solid-select-input:focus-within {
     outline-color: white;
     border-color: #ffffff;
     border-width: 0px;
 }
+
 .formgear-select .solid-select-input:read-only {
     cursor: default;
 }
+
 .formgear-select .solid-select-list {
     background-color: inherit;
     border-radius: 0.125rem;
@@ -118,21 +138,24 @@
     min-width: 100%;
     padding: 0.5rem;
     position: absolute;
-    --tw-shadow: 0 10px 15px -3px rgb(0 0 0/0.1),0 4px 6px -4px rgb(0 0 0/0.1);
-    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),0 4px 6px -4px var(--tw-shadow-color);
-    -webkit-box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
-    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0/0.1), 0 4px 6px -4px rgb(0 0 0/0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     white-space: nowrap;
     z-index: 1 !important;
 }
+
 .formgear-select .solid-select-option:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+
 .formgear-select .solid-select-option[data-focused="true"] {
     --tw-bg-opacity: 1;
     /* background-color: rgba(243, 244, 246, var(--tw-bg-opacity)); */
 }
+
 .formgear-select .solid-select-option {
     cursor: pointer !important;
     padding-left: 1rem;
@@ -144,16 +167,17 @@
     -ms-user-select: none;
     user-select: none;
 }
+
 .formgear-select .blur {
     --tw-blur: blur(8px);
 }
 
-.formgear-select  .solid-select-control[data-disabled=true]{
+.formgear-select .solid-select-control[data-disabled=true] {
     background-color: #e5e7eb;
     color: #374151;
 }
 
-.dark .formgear-select  .solid-select-control[data-disabled=true]{
+.dark .formgear-select .solid-select-control[data-disabled=true] {
     background-color: #374151;
     color: #9ca3af;
 }
@@ -165,7 +189,8 @@
 .formgear-select-unit .solid-select-container {
     position: relative;
 }
-.formgear-select-unit .solid-select-control {    
+
+.formgear-select-unit .solid-select-control {
     --tw-border-opacity: 0;
     border-color: rgb(209, 213, 219, var(--tw-border-opacity));
     border-radius: 0.25rem;
@@ -179,6 +204,7 @@
     z-index: 0 !important;
     grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+
 .formgear-select-unit .solid-select-control[data-multiple="true"][data-has-value="true"] {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -194,6 +220,7 @@
     grid-gap: 0.25rem;
     gap: 0.25rem;
 }
+
 .formgear-select-unit .solid-select-control:focus-within {
     border-color: transparent;
     border-width: 0;
@@ -201,16 +228,19 @@
     outline: transparent;
     outline-offset: none;
 }
+
 .formgear-select-unit .solid-select-placeholder {
     --tw-text-opacity: 1;
     color: rgba(156, 163, 175, var(--tw-text-opacity));
     grid-column-start: 1;
     grid-row-start: 1;
 }
+
 .formgear-select-unit .solid-select-single-value {
     grid-column-start: 1;
     grid-row-start: 1;
 }
+
 .formgear-select-unit .solid-select-multi-value {
     --tw-bg-opacity: 1;
     background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -230,13 +260,16 @@
     z-index: 0 !important;
     padding-right: 4px;
 }
+
 .formgear-select-unit .solid-select-multi-value-remove {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
 }
+
 .formgear-select-unit .solid-select-multi-value-remove:hover {
     text-shadow: 1px 1px 3px rgb(0 0 0 / 29%), 2px 4px 7px rgb(73 64 125 / 35%);
 }
+
 .formgear-select-unit .solid-select-input {
     background-color: transparent;
     border-width: 0px;
@@ -251,14 +284,17 @@
     grid-row-start: 1;
     font: inherit;
 }
+
 .formgear-select-unit .solid-select-input:focus-within {
     outline-color: white;
     border-color: #ffffff;
     border-width: 0px;
 }
+
 .formgear-select-unit .solid-select-input:read-only {
     cursor: default;
 }
+
 .formgear-select-unit .solid-select-list {
     background-color: inherit;
     border-radius: 0.125rem;
@@ -266,21 +302,24 @@
     min-width: 100%;
     padding: 0.5rem;
     position: absolute;
-    --tw-shadow: 0 10px 15px -3px rgb(0 0 0/0.1),0 4px 6px -4px rgb(0 0 0/0.1);
-    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),0 4px 6px -4px var(--tw-shadow-color);
-    -webkit-box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
-    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0/0.1), 0 4px 6px -4px rgb(0 0 0/0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     white-space: nowrap;
     z-index: 1 !important;
 }
+
 .formgear-select-unit .solid-select-option:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+
 .formgear-select-unit .solid-select-option[data-focused="true"] {
     --tw-bg-opacity: 1;
     /* background-color: rgba(243, 244, 246, var(--tw-bg-opacity)); */
 }
+
 .formgear-select-unit .solid-select-option {
     cursor: pointer !important;
     padding-left: 1rem;
@@ -292,18 +331,19 @@
     -ms-user-select: none;
     user-select: none;
 }
+
 .formgear-select-unit .blur {
     --tw-blur: blur(8px);
 }
 
-.formgear-select-unit  .solid-select-control[data-disabled=true]{
+.formgear-select-unit .solid-select-control[data-disabled=true] {
     background-color: #e5e7eb;
     color: #374151;
 }
 
 .formgear-input-papi {
     @apply w-full rounded font-light px-4 py-2.5 text-sm text-gray-700 bg-white bg-clip-padding transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none disabled:bg-gray-200 dark:disabled:bg-gray-700 dark:disabled:text-gray-400;
-    
+
 }
 
 .formgear-input-papi-validation-0 {
