--- a/src/assets/font-montserrat/font-montserrat.css
+++ b/src/assets/font-montserrat/font-montserrat.css
@@ -5,7 +5,7 @@
     font-style: italic;
     font-weight: 100;
     font-display: swap;
-    src: url(.//Montserrat-ThinItalic.ttf) format('truetype');
+    src: url(./Montserrat-ThinItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -13,7 +13,7 @@
     font-style: italic;
     font-weight: 200;
     font-display: swap;
-    src: url(.//Montserrat-ExtraLightItalic.ttf) format('truetype');
+    src: url(./Montserrat-ExtraLightItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -21,7 +21,7 @@
     font-style: italic;
     font-weight: 300;
     font-display: swap;
-    src: url(.//Montserrat-LightItalic.ttf) format('truetype');
+    src: url(./Montserrat-LightItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -29,7 +29,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url(.//Montserrat-Italic.ttf) format('truetype');
+    src: url(./Montserrat-Italic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -37,7 +37,7 @@
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: url(.//Montserrat-MediumItalic.ttf) format('truetype');
+    src: url(./Montserrat-MediumItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -45,7 +45,7 @@
     font-style: italic;
     font-weight: 600;
     font-display: swap;
-    src: url(.//Montserrat-SemiBoldItalic.ttf) format('truetype');
+    src: url(./Montserrat-SemiBoldItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -53,7 +53,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url(.//Montserrat-BoldItalic.ttf) format('truetype');
+    src: url(./Montserrat-BoldItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -61,7 +61,7 @@
     font-style: italic;
     font-weight: 800;
     font-display: swap;
-    src: url(.//Montserrat-ExtraBoldItalic.ttf) format('truetype');
+    src: url(./Montserrat-ExtraBoldItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -69,7 +69,7 @@
     font-style: italic;
     font-weight: 900;
     font-display: swap;
-    src: url(.//Montserrat-BlackItalic.ttf) format('truetype');
+    src: url(./Montserrat-BlackItalic.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -77,7 +77,7 @@
     font-style: normal;
     font-weight: 100;
     font-display: swap;
-    src: url(.//Montserrat-Thin.ttf) format('truetype');
+    src: url(./Montserrat-Thin.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -85,7 +85,7 @@
     font-style: normal;
     font-weight: 200;
     font-display: swap;
-    src: url(.//Montserrat-ExtraLight.ttf) format('truetype');
+    src: url(./Montserrat-ExtraLight.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -93,7 +93,7 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url(.//Montserrat-Light.ttf) format('truetype');
+    src: url(./Montserrat-Light.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -101,7 +101,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(.//Montserrat-Regular.ttf) format('truetype');
+    src: url(./Montserrat-Regular.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -109,7 +109,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url(.//Montserrat-Medium.ttf) format('truetype');
+    src: url(./Montserrat-Medium.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -117,7 +117,7 @@
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url(.//Montserrat-SemiBold.ttf) format('truetype');
+    src: url(./Montserrat-SemiBold.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -125,7 +125,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(.//Montserrat-Bold.ttf) format('truetype');
+    src: url(./Montserrat-Bold.ttf) format('truetype');
   }
   /* latin */
   @font-face {
@@ -133,7 +133,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: url(.//Montserrat-ExtraBold.ttf) format('truetype');
+    src: url(./Montserrat-ExtraBold.ttf) format('truetype');
   }
   /* latin */
   @font-face {
