--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url(../src/assets/font-montserrat/font-montserrat.css);
-
 @import "tailwindcss";
 @plugin "@tailwindcss/forms";
 @plugin "tailwind-scrollbar";
@@ -8,6 +6,136 @@
 
 @theme {
     --font-sans: 'Montserrat', ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+/* Montserrat Font - Italic weights */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 100;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-ThinItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 200;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-ExtraLightItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 300;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-LightItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Italic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-MediumItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 600;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-SemiBoldItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-BoldItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 800;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-ExtraBoldItalic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 900;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-BlackItalic.ttf) format('truetype');
+}
+
+/* Montserrat Font - Normal weights */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Thin.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-ExtraLight.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Light.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Regular.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Medium.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-SemiBold.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Bold.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-ExtraBold.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 900;
+    font-display: swap;
+    src: url(@/assets/font-montserrat/Montserrat-Black.ttf) format('truetype');
 }
 
 
